# trabalho-02-gustavoluiz

./: .gitignore  CHANGELOG.md  Dockerfile  LICENSE  Makefile  README.md  commands  sl-compiler.cabal
app/: Main.hs
relatorio/: Makefile  main.tex  relatorio.tex
src/: AST.hs  CodeGen.hs  Grammar.ebnf  Grammar.md  Interpreter.hs  Lexer.hs  Lexer.x  Parser.hs  Parser.y  Pretty.hs  Tokens.hs  TreeUtils.hs  TypeChecker.hs
src/tests/: bubble_sort.sl  erro_generics.sl  fatorial.sl  fibonacci.sl  scope_test.sl  test1.sl  test2_structs.sl  test3_arrays.sl  test4_generics.sl  test5_comments.sl  test6_multcomm.sl  test_broken_comment.sl  test_codegen_basico.sl  test_complexo.sl  test_erro_condicao.sl  test_erro_escopo.sl  test_erro_funcao.sl  test_erro_struct_array.sl  test_erro_tipos.sl  test_execucao.sl  test_generics_real.sl  test_generics_sintaxe.sl  test_inferencia.sl  test_sucesso_completo.sl
src/tests/generics/: teste06_generics_array.sl  teste07_inferencia.sl  teste08_erro_generics.sl
src/tests/interpreter/: teste01_basico.sl  teste02_fatorial.sl  teste03_arrays.sl  teste04_structs.sl
src/wat/: fatorial.wasm  fatorial.wat  index.html
test/: Main.hs
