cabal-version:      3.0
name:               sl-compiler
version:            0.1.0.0
synopsis:           SL compiler
category:           Language
build-type:         Simple
license:            BSD-3-Clause
license-file:       LICENSE
author:             Luiz/Gustavo
maintainer:         n
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    hs-source-dirs:   src
    
    exposed-modules:  Lexer
                      Tokens
                      AST    
                      Parser 
                      Pretty
                      TreeUtils
                      TypeChecker
                      Interpreter
                      CodeGen 

    build-depends:    base >= 4.14 && <5
                    , array
                    , containers
                    , pretty
                    , mtl
    
    default-language: Haskell2010
    build-tool-depends: alex:alex, happy:happy

executable sl-compiler
    import:           warnings
    main-is:          Main.hs
    
    hs-source-dirs:   app
    
    build-depends:    base >= 4.14 && <5
                    , sl-compiler
                    , array
                    , containers   
    
    default-language: Haskell2010

-- NOVA SEÇÃO DE TESTES
test-suite sl-tests
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    
    -- Diretório onde ficará o código Haskell do teste (crie a pasta 'test')
    hs-source-dirs:   test
    main-is:          Main.hs
    
    -- Dependências necessárias para rodar os testes
    build-depends:    base >= 4.14 && <5
                    , sl-compiler
                    , directory
                    , filepath
                    , containers
                    , mtl